# make_django

./: README.md  category_fixture.json  env.sample  group_fixture.json  product_fixture.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
catalog/: admin.py  forms.py  models.py  service.py  services.py  urls.py  views.py
catalog/management/commands/: add_product.py
catalog/migrations/: 0001_initial.py  0002_product_owner.py
catalog/templates/: base.html  contacts.html  home.html
catalog/templates/catalog/: product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/: login.html
users/templates/users/: user_form.html
