[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Ivan <jaloylee@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "4.2.2"
black = "^25.1.0"
python-dotenv = "^1.0.1"
pillow = "^11.1.0"
ipython = "^9.0.2"
flake8 = "^7.1.2"
mypy = "^1.15.0"
isort = "^6.0.1"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Максимальная длина строки
line_length = 119
# Файлы, которые не нужно форматоровать
exclude = '.git'

[tool.isort]
# Максимальная длина строки
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'